--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,19 +27,15 @@ jobs:
   lint:
     runs-on: ubuntu-latest
     needs: install
-    env:
-      IMAGE_NAME: ${{ needs.install.outputs.IMAGE_NAME }}
     container:
-      image: ttl.sh/${IMAGE_NAME}
+      image: ttl.sh/${{ IMAGE_NAME }}:2h
     steps:
       - run: npm run lint
 
   test:
     runs-on: ubuntu-latest
     needs: install
-    env:
-      IMAGE_NAME: ${{ needs.install.outputs.IMAGE_NAME }}
     container:
-      image: ttl.sh/${IMAGE_NAME}
+      image: ttl.sh/${{ IMAGE_NAME }}:2h
     steps:
       - run: npm test
