--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ "paipeline" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "paipeline" ]
+    branches: [ "master" ]
 
 jobs:
   build:
