--- a/workflows/ci.yaml
+++ b/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v6
       - uses: actions/setup-node@v6
         with:
-          node-version: .nvmrc
+          node-version-file: ".nvmrc"
       - name: Install Dependencies
         run: npm ci
       - name: Execution des tests Unitaires
