--- a/.github/workflow/ci.yml
+++ b/.github/workflow/ci.yml
@@ -16,6 +16,8 @@ jobs:
           node-version-file: ".nvmrc"
       - name: Install deps
         run: npm ci
+      - name: Build project
+        run: npm run build
       - name: Run unit tests
         run: npm test
       - name: Linter
