--- a/ci.yml
+++ b/ci.yml
@@ -5,10 +5,19 @@ on:
     branches:
       - master # sur la branche 'master' uniquement
 jobs:
-  deploy: # Nom du 1er job
+  deploy: windows-latest # Nom du 1er job
     runs-on: 
     step:
-      -uses: actions/checkout@v5
-      -uses: actions/setup-node@v6
+      - uses: actions/checkout@v5
+      - uses: actions/setup-node@v6
         with : 
           node-version-file: ".nvmrc"
+      - name: Install dependencies
+        run: npm ci
+      - name: Build project
+        run: npm build project
+      - name: Deploy project
+        run: npm run deploy
+    jobs:
+      test:
+        needs: build
