--- a/ci.yml
+++ b/ci.yml
@@ -18,6 +18,10 @@ jobs:
         run: npm build project
       - name: Deploy project
         run: npm run deploy
+      - name: Test
+        npm test
+      - name: Lint
+        run: npm run lint
     jobs:
       test:
         needs: build
