--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - master
 jobs:
-  main:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v6
