--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,7 @@
 
 name: CI # Nom du workflow
 on:
-  push:
-    branches:
-      - master
+  pull_request:
 jobs:
   deploy:
     runs-on: windows-latest
