--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 on:
+  push:
+    branches: [master]
   pull_request:
+    branches: [master]    
+    
 jobs:
   deploy:
     runs-on: ubuntu-latest # télécharge depuis github
