--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "rm -rf allure-reports/ && jest",
+    "test:clean": "rm -rf allure-results",
+    "test": "npm run test:clean && jest tests/unit/ tests/integration/ tests/e2e/",
+    "test:trigger-alarm": "npm run test:clean && jest tests/trigger/trigger.test.js",
     "start": "node src/server.js",
     "alluviewer": "allure serve allure-results",
     "exporter": "node src/allure-prometheus-exporter.js"
