--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,7 @@ on:
 
 jobs: 
   init:
-    runs-on: 
-      - ubuntu-latest
-      - windows-latest
-      - macos-latest
-
+    runs-on: ubuntu-latest
     steps: 
       # checkout repo
       - uses: actions/checkout@v5
