--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: CI
 
 on:
   push:
-    branches: [master]
+    branches: [nacibide-gha]
   pull_request:
-    branches: [master]
+    branches: [nacibide-gha]
 
 jobs:
   lint:
