--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD PIPELINE
+name: CI/CD Pipeline
 
 on:
   push:
@@ -9,21 +9,32 @@ on:
       - master
 
 jobs:
-  deploy:
+  lint:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
         with:
-          node-version-file: .nvmrc
+          node-version-file: '.nvmrc'
+
       - name: Install dependencies
         run: npm ci
-      - name: Run unit tests
-        run: npm run test:unit
-      - name: Run integration tests
-        run: npm run test:integration
-      - name: Run e2e tests
-        run: npm run test:e2e
-      - name: Run Lint
+
+      - name: Lint code
         run: npm run lint
+
+      - name: Run Unit Tests
+        run: npm run test:unit
+        continue-on-error: false
+
+      - name: Run Integration Tests
+        run: npm run test:integration
+        continue-on-error: false
+
+      - name: Run E2E Tests
+        run: npm run test:e2e
+        continue-on-error: true
+        timeout-minutes: 10
