--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD PIPELINE
 
 on:
   push:
@@ -9,32 +9,21 @@ on:
       - master
 
 jobs:
-  lint:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-
-      - name: Setup Node.js
+      - uses: actions/checkout@v6
+      - name: Set up Node.js
         uses: actions/setup-node@v6
         with:
-          node-version-file: '.nvmrc'
-
+          node-version-file: .nvmrc
       - name: Install dependencies
         run: npm ci
-
-      - name: Lint code
-        run: npm run lint
-
-      - name: Run Unit Tests
+      - name: Run unit tests
         run: npm run test:unit
-        continue-on-error: false
-
-      - name: Run Integration Tests
+      - name: Run integration tests
         run: npm run test:integration
-        continue-on-error: false
-
-      - name: Run E2E Tests
+      - name: Run e2e tests
         run: npm run test:e2e
-        continue-on-error: true
-        timeout-minutes: 10
+      - name: Run Lint
+        run: npm run lint
