--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "start": "node src/server.js"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "express": "^4.18.2",
-    "supertest": "^6.3.0",
-    "axios": "^1.3.4"
+    "supertest": "^6.3.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0"
   },
   "engines": {
     "node": ">=22.19.0"
