--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,31 +11,49 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v6
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Node.js
-        uses: actions/setup-node@v6
+        uses: actions/setup-node@v4
         with:
           node-version-file: .nvmrc
+          cache: npm
+
       - name: Install dependencies
         run: npm ci
-        
+
       - name: Install Allure Commandline
         run: npm install -g allure-commandline
+
       - name: Run unit tests
-        run: npm run test:unit -- --reporters=jest-junit
+        run: |
+          mkdir -p reports
+          JEST_JUNIT_OUTPUT=reports/junit-unit.xml \
+          npm run test:unit -- --reporters=jest-junit --runInBand --verbose
+
       - name: Run integration tests
-        run: npm run test:integration -- --reporters=jest-junit
+        run: |
+          mkdir -p reports
+          JEST_JUNIT_OUTPUT=reports/junit-integration.xml \
+          npm run test:integration -- --reporters=jest-junit --runInBand --verbose --detectOpenHandles
+
       - name: Run e2e tests
-        run: npm run test:e2e -- --reporters=jest-junit
+        run: |
+          mkdir -p reports
+          JEST_JUNIT_OUTPUT=reports/junit-e2e.xml \
+          npm run test:e2e -- --reporters=jest-junit --runInBand --verbose --detectOpenHandles
+
       - name: Run Lint
         run: npm run lint
-      
+
       - name: Generate Allure Report
         if: always()
         run: |
           allure generate allure-results --clean -o allure-report || true
-      
+
       - name: Upload Allure Report
         if: always()
         uses: actions/upload-artifact@v4
