--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,15 @@ on:
       - master
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v6
+      
       - name: Set up Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
         with:
-          node-version-file: .nvmrc
-          cache: npm
+          node-version: 22.19.0
 
       - name: Install dependencies
         run: npm ci
@@ -29,22 +26,13 @@ jobs:
         run: npm install -g allure-commandline
 
       - name: Run unit tests
-        run: |
-          mkdir -p reports
-          JEST_JUNIT_OUTPUT=reports/junit-unit.xml \
-          npm run test:unit -- --reporters=jest-junit --runInBand --verbose
+        run: npm run test:unit -- --reporters=default --reporters=jest-junit
 
       - name: Run integration tests
-        run: |
-          mkdir -p reports
-          JEST_JUNIT_OUTPUT=reports/junit-integration.xml \
-          npm run test:integration -- --reporters=jest-junit --runInBand --verbose --detectOpenHandles
+        run: npm run test:integration -- --reporters=default --reporters=jest-junit
 
       - name: Run e2e tests
-        run: |
-          mkdir -p reports
-          JEST_JUNIT_OUTPUT=reports/junit-e2e.xml \
-          npm run test:e2e -- --reporters=jest-junit --runInBand --verbose --detectOpenHandles
+        run: npm run test:e2e -- --reporters=default --reporters=jest-junit
 
       - name: Run Lint
         run: npm run lint
