--- a/.github/workflows/tp_allure.yml
+++ b/.github/workflows/tp_allure.yml
@@ -26,8 +26,8 @@ jobs:
       - name: install Allure
         run: npm install -g allure
       - name: Run tests with Azure
-        - run: allure run -- npm test
-        - run: allure generate output/
+        run: allure run -- npm test
+      - run: allure generate output/
       - name: Archive Allure report
         uses: actions/upload-artifact@v4
         with:
