--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         run: npm test
       - name: Lint project
         run: npm run lint
+      - name: Install Allure
+        run: npm install -g allure
       - name: Load test report history
         uses: actions/checkout@v3
         if: always()
