--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "supertest": "^6.3.0"
   },
   "devDependencies": {
+    "allure-js-commons": "^3.4.3",
     "eslint": "^8.0.0",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "jest-allure2-reporter": "^2.2.8"
   },
   "engines": {
     "node": ">=22.19.0"
