--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "lint": "eslint .",
-    "test": "rm -rf allure-reports/ && jest",
+    "test": "rimraf allure-reports/ && jest",
     "start": "node src/server.js",
     "alluviewer": "allure serve allure-results",
     "exporter": "node src/allure-prometheus-exporter.js"
@@ -20,7 +20,8 @@
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
     "jest-environment-node": "^30.2.0",
-    "prom-client": "^15.1.3"
+    "prom-client": "^15.1.3",
+    "rimraf": "^6.1.2"
   },
   "engines": {
     "node": ">=22.19.0"
