--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,41 +7,59 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v6
         with:
           node-version-file: ".nvmrc"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests (Jest + Allure)
+      - name: Run tests
         run: npm test
 
-      - name: Save Allure history from gh-pages
+      - name: Lint project
+        run: npm run lint
+
+      - name: Load test report history
         uses: actions/checkout@v3
         if: always()
+        continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
-        continue-on-error: true
 
       - name: Generate Allure report
         uses: andgineer/allure-report@v3
-        if: always()
         with:
-          allure-results: allure-results
+          allure-results: build/allure-results
           website: gh-pages
-          reports-site-path: allure-report
-          report-name: Allure Test Report
+          reports-site-path: allure-history
 
-      - name: Publish Allure report to GitHub Pages
+      - name: Upload report
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-history
+          path: allure-history
+
+  publish:
+    needs: tests
+    runs-on: ubuntu-latest
+    if: always() # exécuter même si tests échouent
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Download report
+        uses: actions/download-artifact@v4
+        with:
+          name: allure-history
+          path: allure-history
+
+      - name: Publish test report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
-        if: always()
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-report
+          publish_dir: allure-history
