--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,59 +7,43 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v5
 
-      - uses: actions/setup-node@v6
+    steps:
+      - uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Run tests
+      - name: Run Jest tests
         run: npm test
 
-      - name: Lint project
-        run: npm run lint
-
-      - name: Load test report history
+      # Charge l'historique existant depuis la branche gh-pages
+      - name: Load Allure history
         uses: actions/checkout@v3
         if: always()
-        continue-on-error: true
         with:
           ref: gh-pages
           path: gh-pages
+        continue-on-error: true
 
+      # Génère le rapport basé sur allure-results/
       - name: Generate Allure report
+        if: always()
         uses: andgineer/allure-report@v3
         with:
-          allure-results: build/allure-results
+          allure-results: allure-results
           website: gh-pages
-          reports-site-path: allure-history
+          reports-site-path: allure-report
 
-      - name: Upload report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-history
-          path: allure-history
-
-  publish:
-    needs: tests
-    runs-on: ubuntu-latest
-    if: always() # exécuter même si tests échouent
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Download report
-        uses: actions/download-artifact@v4
-        with:
-          name: allure-history
-          path: allure-history
-
-      - name: Publish test report to GitHub Pages
+      # Publie sur gh-pages (créée automatiquement)
+      - name: Publish Allure Report to GitHub Pages
+        if: always()
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: allure-history
+          publish_dir: allure-report
