--- a/prometheus.yml
+++ b/prometheus.yml
@@ -3,4 +3,4 @@ global:
 scrape_configs:
   - job_name: "allure-exporter"
     static_configs:
-      - targets: ["localhost:9091"] # Adjust if running on a different host/port
+      - targets: ["localhost:9091"]
