--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -38,10 +38,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - uses: actions/checkout@v5
+
       - name: Download Allure report
         uses: actions/download-artifact@v5
-        with:
-          name: github-pages
 
       - name: Deploy Allure report to GH Pages
         id: deployment
